Adding new enviroment variable.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,4 @@ microbrewit-api:
         - POSTGRES_DB=microbrewit
         - POSTGRES_USER=microbrewit
         - POSTGRES_PASSWORD=microbrewitpassword
+        - MICROBREWIT_APIURL=http://localhost:8080
